--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -10,7 +10,7 @@ RUN pip install ipython
 
 WORKDIR /app
 
-RUN git clone https://github.com/wadobo/decide.git .
+RUN git clone https://github.com/miguelvr98/EGC-830-migvelrom2.git .
 RUN pip install -r requirements.txt
 
 WORKDIR /app/decide
