--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,11 @@ install:
 - pip install -r requirements.txt
 script:
 - cd decide
+- cp travis_local_settings.py local_settings.py
 - python3 ./manage.py test --keepdb
+deploy:
+provider: heroku
+app: "prueba-examen-septiembre"
+strategy: git
 notifications:
   email: false
