--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
 script:
 - cd decide
 - cp travis_local_settings.py local_settings.py
-- python3 ./manage.py test --keepdb
+- python ./manage.py test --keepdb
 deploy:
 provider: heroku
 app: "prueba-examen-septiembre"
